--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,13 @@
-# FinPilot Environment Configuration
-# Copy this file to .env and update the values as needed
+# FinPilot Server Environment Configuration
+# Copy this file to .env and update with your values
 
-# =============================================================================
-# CLIENT ENVIRONMENT VARIABLES
-# =============================================================================
-
-# API Configuration
-VITE_API_URL=http://localhost:5000/api
-VITE_API_BASE_URL=http://localhost:5000
-
-# Application Configuration
-VITE_APP_NAME=FinPilot
-VITE_APP_VERSION=1.0.0
-VITE_APP_DESCRIPTION="Enterprise Finance Platform"
-
-# Development Configuration
-VITE_NODE_ENV=development
-VITE_PORT=5173
-
-# =============================================================================
-# SERVER ENVIRONMENT VARIABLES (for reference)
-# =============================================================================
-
-# Database Configuration
+# Database Configuration (Use Supabase, Neon, or PlanetScale free tier)
 DATABASE_URL="postgresql://username:password@localhost:5432/finpilot"
+# Example Supabase URL format:
+# DATABASE_URL="postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres"
 
 # JWT Configuration
-JWT_SECRET="your-super-secret-jwt-key-here-minimum-32-characters"
+JWT_SECRET="your-super-secret-jwt-key-here-minimum-32-characters-long"
 JWT_EXPIRES_IN="7d"
 JWT_REFRESH_EXPIRES_IN="30d"
 
@@ -35,7 +16,7 @@ PORT=5000
 NODE_ENV="development"
 CORS_ORIGIN="http://localhost:5173"
 
-# Email Configuration (for notifications)
+# Email Configuration (Optional - for notifications)
 EMAIL_HOST="smtp.gmail.com"
 EMAIL_PORT=587
 EMAIL_USER="your-email@gmail.com"
@@ -59,33 +40,6 @@ RATE_LIMIT_MAX_REQUESTS=100
 LOG_LEVEL="info"
 LOG_FILE="./logs/app.log"
 
-# =============================================================================
-# OPTIONAL THIRD-PARTY SERVICES
-# =============================================================================
-
-# AWS S3 (if using cloud storage)
-AWS_ACCESS_KEY_ID="your-aws-access-key"
-AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
-AWS_REGION="us-east-1"
-AWS_S3_BUCKET="finpilot-uploads"
-
-# Redis (if using caching)
-REDIS_URL="redis://localhost:6379"
-
-# Stripe (if using payment processing)
-STRIPE_SECRET_KEY="sk_test_your_stripe_secret_key"
-STRIPE_PUBLISHABLE_KEY="pk_test_your_stripe_publishable_key"
-
-# Sentry (for error tracking)
-SENTRY_DSN="https://your-sentry-dsn@sentry.io/project-id"
-
-# =============================================================================
-# DEVELOPMENT TOOLS
-# =============================================================================
-
 # Database Seeding
 SEED_ADMIN_EMAIL="admin@finpilot.com"
 SEED_ADMIN_PASSWORD="admin123"
-
-# Testing
-TEST_DATABASE_URL="postgresql://username:password@localhost:5432/finpilot_test"
