--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "setup-db": "node setup-db.js",
+    "deploy": "npm run setup-db && npm start"
   },
   "keywords": [],
   "author": "",
